[gd_scene load_steps=11 format=3 uid="uid://c3bgpyofqbuki"]

[ext_resource type="Script" path="res://scripts/items/interactible/Tiger.gd" id="1_gcukg"]
[ext_resource type="Texture2D" uid="uid://e5vijwua7msb" path="res://assets/MyAssets/Maps/workshop int/tiger.png" id="1_mxpe8"]
[ext_resource type="Script" path="res://scripts/items/interactible/LongerDescPopup.gd" id="3_qeabg"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://assets/TemplateAssets/Assets/Font/Schr√∂dinger.ttf" id="4_fajut"]
[ext_resource type="Texture2D" uid="uid://bp36qmygp0moa" path="res://assets/MyAssets/UI/dialogBox.png" id="4_qxfwb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jqhmj"]
radius = 159.0
height = 428.0

[sub_resource type="Animation" id="Animation_28d4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LongerDescPopup/Dialog/Message:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_itvoq"]
resource_name = "typewriter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LongerDescPopup/Dialog/Message:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_pfhv2"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dafb"]
_data = {
"RESET": SubResource("Animation_28d4q"),
"fade_out": SubResource("Animation_pfhv2"),
"typewriter": SubResource("Animation_itvoq")
}

[node name="Tiger" type="StaticBody2D"]
script = ExtResource("1_gcukg")
messages = ["The giant robot sits quietly in the corner. Its wires connect to computers from various points in time, sparking and whirring loudly.", "You're scared to get close, the robot decked out with tactical gear. Looking at it, though, it looks a lot like the TIGER models from those blueprints.", "Maybe you should continue Tobenna's work and try to wake it up."]
jay_messages = ["You put everything in its right place, and the TIGER wakes up."]
tess_charlie_messages = ["I have all the components, but I don't know what to do with them."]

[node name="Tiger" type="Sprite2D" parent="."]
texture = ExtResource("1_mxpe8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, 52, 17, 105, 158, 255, 277, 101, 333, -122, 307, -177, 109, -223, -54, -118)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(85, 28)
shape = SubResource("CapsuleShape2D_jqhmj")

[node name="LongerDescPopup" type="CanvasLayer" parent="."]
script = ExtResource("3_qeabg")

[node name="Dialog" type="NinePatchRect" parent="LongerDescPopup"]
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.669
anchor_right = 0.812
anchor_bottom = 0.904445
offset_left = 0.959991
offset_top = -0.52002
offset_right = 0.959961
offset_bottom = 0.199951
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_qxfwb")
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="LongerDescPopup/Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0479167
anchor_top = 0.280392
anchor_right = 0.959583
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -22.5
offset_right = 0.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_fajut")
theme_override_font_sizes/font_size = 45
text = "Text...."
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Label" parent="LongerDescPopup/Dialog"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -143.5
offset_top = -50.0
offset_right = 143.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.283472, 0.399079, 0.736571, 1)
theme_override_fonts/font = ExtResource("4_fajut")
theme_override_font_sizes/font_size = 35
text = "[E to Continue]"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6dafb")
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4267.0
offset_top = -3798.0
offset_right = 5526.0
offset_bottom = 3670.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
